# spm-windlast

./: .gitignore  CHANGELOG_reaktionsabschaetzung.md  Makefile  README.md  pyproject.toml
.agents/skills/spittelmeister-latex/: SKILL.md
.agents/skills/spittelmeister-report/: SKILL.md
apps/streamlit_app/: app.py
apps/streamlit_app/pages/: 01_Windlast.py  02_Verankerung.py  03_Herstellernachweis.py  04_Protokoll.py
assets/: balcony_system.tex  building_geometry_cases.tex  building_geometry_zoning.tex  load_scheme.tex  reaction_scheme.tex
docs/: ARCHITEKTUR_SCAFFOLD.md
docs/audits/: uv_migration_report.md
scripts/: convert_destatis_kreise_to_json.py  convert_erdbeben_excel_to_json.py  convert_excel_to_json.py  example_headless.py
src/spittelmeister_windlast/: __init__.py  api.py  cli.py
src/spittelmeister_windlast/core/: __init__.py  berechnung.py  druckbeiwerte.py  modelle.py  peak_pressure.py
src/spittelmeister_windlast/daten/: __init__.py  admin_kreise_codes.json  qb0.json  schneelastzone_kreis.json  schneelastzone_kreis_detail.json  windzone_bundesland.json  windzone_kreis.json  windzone_kreis_detail.json  windzone_plz.json  windzone_plz_prefix.json
src/spittelmeister_windlast/geo/: __init__.py  _admin_code.py  _normalize.py  elevation.py  erdbeben.py  gelaende.py  geocoding.py  modelle.py  pipeline.py  schneelast.py  windzone.py
src/spittelmeister_windlast/projectio/: __init__.py  mapper.py  models.py  serializer.py  service.py  validation.py
src/spittelmeister_windlast/report/: __init__.py  base.py  latex.py  protokoll_verankerung.py  protokoll_windlast.py  report_bundle.py  report_combined.py  report_figures.py  report_selection.py
src/spittelmeister_windlast/transfer/: __init__.py  mapping.py  modelle.py  platform_supports.py  vereinfachtes_balkonsystem.py
src/spittelmeister_windlast/ui/: __init__.py  project_ui.py  session.py  verankerung_consistency.py  verankerung_optimizer.py  verankerung_preview.py  windlast_page.py
src/spittelmeister_windlast/utils/: __init__.py  assets.py  latex_escape.py  pdflatex.py
src/spittelmeister_windlast/verankerung/: __init__.py  assessment.py  manufacturers.py  modelle.py  serializers.py
tests/: conftest.py  test_admin_code_lookup.py  test_combined_report.py  test_druckbeiwerte.py  test_erdbeben_dataset.py  test_export_pdf_wrapper.py  test_parity_legacy.py  test_pdflatex_invocation.py  test_pdflatex_resolution.py  test_peak_pressure.py  test_projectio_roundtrip.py  test_public_api.py  test_reaktionen_vereinfacht.py  test_report_figures.py  test_report_smoke.py  test_scaffold_imports.py  test_schneelast.py  test_streamlit_app_smoke.py  test_support_distribution.py  test_transfer_layer.py  test_ui_verankerung_consistency.py  test_ui_verankerung_optimizer.py  test_ui_verankerung_preview.py  test_verankerung_module.py  test_visual_assets_integration.py  test_wind_state_persistence.py  test_windzone_lookup.py
tests/_legacy/: geo_standort.py  windlast_generator.py
