[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spittelmeister-windlast"
version = "2.0.0"
description = "Windlastermittlung fuer Balkonabschluesse nach DIN EN 1991-1-4 / NA:2010-12"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Spittelmeister GmbH — Statik-Abteilung", email = "statik@spittelmeister.de" },
]
license = { text = "Proprietary — internal use only" }
keywords = ["structural-engineering", "eurocode", "wind-load", "din-en-1991", "balkon"]

# Rechenkern braucht nichts ausser der stdlib.
dependencies = []

[project.optional-dependencies]
# Standortermittlung (Geocoding, Elevation, Windzone-Lookup)
geo = [
    "requests>=2.31.0",
]

# Streamlit-App
app = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.18.0",
    "requests>=2.31.0",
]

# Alles zusammen
all = [
    "requests>=2.31.0",
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.18.0",
]

# Entwicklung / Tests
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
# CLI-Einstieg fuer Headless-Nutzung / CI
spittelmeister-windlast = "spittelmeister_windlast.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spittelmeister_windlast"]

[tool.hatch.build.targets.wheel.force-include]
# JSON-Datentabellen mitverpacken
"src/spittelmeister_windlast/daten" = "spittelmeister_windlast/daten"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "network: marks tests that require network access (deselect with '-m \"not network\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = [
    "E501",  # line length (handled by formatter)
    "N802",  # non-lowercase function names (Hk, Mk etc. folgen DIN-Notation)
    "N803",  # non-lowercase arguments
    "N806",  # non-lowercase variable names
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
