
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spittelmeister-windlast"
version = "2.3.0"
description = "Windlastermittlung fuer Balkonabschluesse nach DIN EN 1991-1-4 / NA:2010-12"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Spittelmeister GmbH — Statik-Abteilung", email = "statik@spittelmeister.de" },
]
license = { text = "Proprietary — internal use only" }
keywords = ["structural-engineering", "eurocode", "wind-load", "din-en-1991", "balkon"]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
geo = [
    "requests>=2.31.0",
]
app = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.18.0",
    "requests>=2.31.0",
]
all = [
    "requests>=2.31.0",
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.18.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
spittelmeister-windlast = "spittelmeister_windlast.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spittelmeister_windlast"]

[tool.hatch.build.targets.wheel.force-include]
"src/spittelmeister_windlast/daten" = "spittelmeister_windlast/daten"
"assets" = "spittelmeister_windlast/assets"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
markers = [
    "network: marks tests that require network access (deselect with '-m \"not network\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
